[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/CombatPanels/Skills/SkillMenuItem.gd" type="Script" id=1]

[node name="SkillPanelItem" type="Panel"]
margin_right = 176.0
margin_bottom = 26.0
script = ExtResource( 1 )

[node name="SkillName" type="Label" parent="."]
margin_left = 6.0
margin_right = 136.0
margin_bottom = 26.0
text = "Skill_Name_Example"
valign = 1

[node name="SkillCost" type="Label" parent="."]
margin_left = 146.0
margin_right = 162.0
margin_bottom = 26.0
text = "99"
valign = 1

[connection signal="gui_input" from="." to="." method="on_item_click"]
